<?xml version="1.0"?>
<package format="2">
  <name>iiwa_ros</name>
  <version>1.4.0</version>
  <description>The iiwa_ros package</description>
  <author email="plutz@mail.xyz">Patrick Lutz</author>
  <maintainer email="plutz@mail.xyz">Patrick Lutz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>iiwa_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>trajectory_msgs</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
